chore:molly&frens pixelated

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<title>Join the Waitlist</title>
 	<h2>Molly & frens </h2>
-	<link href="https://fonts.googleapis.com/css2?family=Waltograph&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 	<style>
 		body {
 			background-color: #ffdd57;
-			font-family: 'Waltograph', sans-serif;
+			font-family: 'Press Start 2P', monospace;
 			text-align: center;
 		}
 		h1 {
